--- a/storage/DontEdit/playerformat.yml
+++ b/storage/DontEdit/playerformat.yml
@@ -5,7 +5,7 @@ stats:
   range: 1
   #attack range (in tiles) upgradeable (in a square, so dx==1, dy==1 or dx & dy == 1)
 character:
-  lifes: 3
+  lives: 3
   #out of 3, can't be bought extra
   tokens: 1
   #spending power
