--- a/storage/DontEdit/playerformat.yml
+++ b/storage/DontEdit/playerformat.yml
@@ -2,13 +2,20 @@ info:
   id: "<id>"
   name: "<name>"
   emoji: ":white_large_square:" #set default to square so we can see if there is an error
+  colours:
+  #R
+    - 255
+  #G
+    - 255
+  #B
+    - 255
 stats:
   range: 1
   #attack range (in tiles) upgradeable (in a square, so dx==1, dy==1 or dx & dy == 1)
 character:
   lives: 3
   #out of 3, can't be bought extra
-  tokens: 3
+  tokens: 1
   #spending power
 gameinfo:
   x-location: 0
